inicializacion de colores del proyect

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div class="b-example-divider"></div>
 
       <!-- ***** inicio del menu de navegación *****-->
-        <div class="container">
-          <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between
+        <section class="container">
+          <article class="d-flex flex-wrap glass-greenty-card align-items-center justify-content-center justify-content-md-between
             py-3 mb-4 mt-4   rounded shadow">
             <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
               <svg class="bi me-2" color="purple" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
@@ -56,8 +56,8 @@
             <div class="b-example-divider"></div>
 
 
-          </header>
-        </div>
+          </article>
+        </section>
       </header>
 
       <main>
@@ -70,6 +70,6 @@
       </footer>
 
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/candidatos.js"></script>
+    <!-- <script src="js/candidatos.js"></script> -->
     </body>
 </html>
