--- a/index.html
+++ b/index.html
@@ -65,8 +65,19 @@
 
       </main>
 
-      <footer>
-
+      <footer class="glass-celesty-card mt-5">
+        <div class="container-fluid pt-1 mt-1 mb-0">
+          <div class=" text-center">
+            <h4 class="  d-inline-block glass-greenty-card mt-3 p-4">Todas tus vacantes completas</h4>
+          </div>
+  
+          
+            
+          <div class="text-center glass-greenty-card p-3 mt-3 mb-5">
+            <h5 class="text-center">Staff Selection 2022 &#169;</h5>
+            <h5 class="text-center   ">Todos los derechos reservados</h5>
+          </div>
+        </div>
       </footer>
 
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
