--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
       </footer>
 
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- <script src="js/candidatos.js"></script> -->
+    <script src="js/candidatos.js"></script>
     </body>
 </html>
