creacion de formulario de carga

--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -93,6 +93,7 @@
     </footer>
     
     <script src="../libs/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- script para la entrega de DOM -->
     <script src="../js/busqueda.js"></script>
 </body>
 
