--- a/pages/enrolamiento.html
+++ b/pages/enrolamiento.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="../css/styles.css" rel="stylesheet" />
 
-    <title>Enrrolamiento de candidatos</title>
+    <title>Carga de Candidatos</title>
 </head>
 
 <body>
@@ -66,7 +66,51 @@
         </section>
     </header>
 
-    <main></main>
+    <main>
+
+        <h1 class="text-center text-primary">Carga de candidatos</h1>
+        <section class="container-fluid glass-celesty-card" style="max-width: 95%">
+            <section class="row overflow_x ">
+                <article class="col mb-4 d-flex justify-content-center">
+                    <form class="form glass-greenty-card p-3 my-2"style="max-width: 23rem; width: 100%; height: 38rem">
+                        <label>Nombre y Apellido</label>
+                        <input class="form-control form-control-sm my-2" type="text" 
+                            placeholder="Nombre Apellido" aria-label=".form-control-sm example">
+                        <label>Edad</label>
+                        <input class="form-control form-control-sm my-2" type="text"
+                            placeholder="21 - Ejemplo" aria-label=".form-control-sm example">
+                        <label>Numero de DNI (sin puntos)</label>
+                        <input class="form-control form-control-sm my-2" type="text"
+                            placeholder="11111111 - ejemplo" aria-label=".form-control-sm example">
+                            <label>Provincia</label>
+                        <input class="form-control form-control-sm my-2" type="text"
+                            placeholder="Buenaos Aires - ejemplo" aria-label=".form-control-sm example">
+                            <label>Ciudad</label>
+                        <input class="form-control form-control-sm my-2" type="text"
+                            placeholder="La Plata - ejemplo" aria-label=".form-control-sm example">
+                        <label>Dirección</label>
+                        <input class="form-control form-control-sm my-2" type="text"
+                            placeholder="Avenida xxxxx 345 Barrio xxxxxxxx" aria-label=".form-control-sm example">
+                        <label>Numero de Celular (con numero de area)</label>
+                        <input class="form-control form-control-sm my-2" type="text"
+                            placeholder=".form-control-sm" aria-label=".form-control-sm example">
+                        <label>Seleccione Especialidad</label>
+                        <select class="form-select my-2" aria-label="Default select example">
+                            <option selected>Elija una Opción</option>
+                            <option value="Frontend">Frontend</option>
+                            <option value="Backend">Backend</option>
+                            <option value="Fullstack">Fullstack</option>
+                        </select>
+
+
+
+
+                    </form>
+                </article> 
+            </section> 
+        </section>  
+
+    </main>
 
     <footer class="glass-celesty-card mt-5">
         <div class="container-fluid pt-1 mt-1 mb-0">
