--- a/index.html
+++ b/index.html
@@ -111,6 +111,6 @@
 
     <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- script para la entrega -->
-    <script src="js/candidatos.js"></script>
+    <!-- <script src="js/candidatos.js"></script> -->
   </body>
 </html>
