--- a/pages/enrolamiento.html
+++ b/pages/enrolamiento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- script de bootstrap -->
-    <script src="../libs/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+    <!-- <script src="../libs/bootstrap/dist/js/bootstrap.min.js" defer></script> -->
 
     <!-- link de los iconos de google -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -89,7 +92,7 @@
                         
                     </div>
                     <div class="modal-body" >
-                        <h5 class=" text-primary text-center  p-2 ">Carga Exitosa</h5>
+                        <h5 class=" text-primary text-center p-3 d-inline-block glass-snow ">Carga Exitosa</h5>
                         <!-- <span class="material-icons">
                             person_add
                         </span> -->
@@ -98,7 +101,7 @@
             </article>
         </aside>
 
-        <h1 class=" text-primary p-3 mt-5 d-inline-block glass-snow">Carga de candidatos</h1>
+        <h1 class=" text-primary mt-5 p-3 d-inline-block glass-snow">Carga de Candidatos</h1>
         <section class="container-fluid glass-celesty-card section_edit">
             <section class="row overflow_x ">
                 <article class="col mb-4 d-flex justify-content-center">
