--- a/pages/enrolamiento.html
+++ b/pages/enrolamiento.html
@@ -7,14 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- script de bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-    <!-- <script src="../libs/bootstrap/dist/js/bootstrap.min.js" defer></script> -->
+    crossorigin="anonymous"></script> -->
+    <script src="../libs/bootstrap/dist/js/bootstrap.min.js" defer></script>
 
     <!-- link de los iconos de google -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
+
+        <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous"> -->
     
         <!-- link del css -->
     <link href="../css/styles.css" rel="stylesheet" />
