--- a/pages/enrolamiento.html
+++ b/pages/enrolamiento.html
@@ -96,8 +96,11 @@
                         
                     </div>
                     <div class="modal-body" >
-                        <h5 class=" text-primary text-center p-3 d-inline-block glass-snow ">Carga Exitosa</h5>
-                        <!-- <span class="material-icons">
+                        
+                        <h5 class=" text-primary text-center p-3 d-inline-block glass-snow "><span class="material-icons text-success md-48 green600">
+                            person_add
+                        </span> Carga exitosa</h5>
+                        <!-- <span class="material-icons md-24 green600">
                             person_add
                         </span> -->
                     </div>
