--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
           </ul>
 
           <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">
+            <button type="button" onclick="window.location.href='pages/login.html';"  class="btn btn-outline-primary me-2">
               Ingresar
             </button>
-            <button type="button" class="btn btn-primary">Registrarse</button>
+            <button type="button" onclick="window.location.href='pages/registration.html';" class="btn btn-primary">Registrarse</button>
           </div>
 
           <div class="b-example-divider"></div>
