algoritmos de login y logout

--- a/pages/enrolamiento.html
+++ b/pages/enrolamiento.html
@@ -23,7 +23,7 @@
         <!-- link del css -->
     <link href="../css/styles.css" rel="stylesheet" />
 
-    <title>Carga de Candidatos</title>
+    <title>Carg&#225; tus Datos</title>
 </head>
 
 <body>
@@ -64,10 +64,10 @@
                         <a href="../index.html" class="nav-link px-2 text-primary link-secondary active">Inicio</a>
                     </li>
                     <li>
-                        <a href="enrolamiento.html" class="nav-link px-2 text-primary link-dark">Enrolamiento</a>
+                        <a href="enrolamiento.html" class="nav-link px-2 text-primary link-dark">Sumate</a>
                     </li>
                     <li>
-                        <a href="busqueda.html" class="nav-link px-2 text-primary link-dark">Busquedas</a>
+                        <a href="busqueda.html" class="nav-link px-2 text-primary link-dark">B&#250;squedas</a>
                     </li>
                     <li>
                         <a href="ayuda.html" class="nav-link px-2 text-primary link-dark">Ayuda</a>
