--- a/pages/registration.html
+++ b/pages/registration.html
@@ -70,7 +70,7 @@
                             <input class="mt-2 mb-4 btn btn-success" type="submit" value="Registrar" />
 
 
-                        <a href="registration.html" class="nav-link px-2 text-primary link-secondary active">Si no se registr&#243; <u>Pulse aqu&#237;</u></a>
+                        <a href="login.html" class="nav-link px-2 text-primary link-secondary active">Si no estas registrado; <u>Pulse aqu&#237;</u></a>
                         <a href="../index.html" class="nav-link px-2 text-primary link-secondary active">Regresar al Inicio</a>
                     </form>
                 </article>
