armado de control

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
   <link href="css/styles.css" rel="stylesheet" />
 
+  <script src="./js/control.js"></script>
+
   <title>Staff Selection</title>
 </head>
 
-<body>
+<body onload="controlFuntion()" >
   <header>
     <!-- ************************* -->
     <!-- ***** Inicio Header ***** -->
@@ -60,7 +62,7 @@
             aria-labelledby="navbarOffcanvasLgLabel">
 
             <div class="offcanvas-header">
-              <button type="button" class="btn-close text-reset btn-close" data-bs-dismiss="offcanvas"
+              <button type="button" class="btn-close  " data-bs-dismiss="modal"
                 aria-label="Close">
               </button>
             </div>
