busquedas seniority OK

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <title>Staff Selection</title>
 </head>
 
-<body onload="controlFuntion()" >
+<body  >
   <header>
     <!-- ************************* -->
     <!-- ***** Inicio Header ***** -->
