--- a/pages/enrolamiento.html
+++ b/pages/enrolamiento.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="shortcut icon" type="image/x-icon" href="../assets/icons/ss.ico">
     
     <!-- script de bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script> -->
     <script src="../libs/bootstrap/dist/js/bootstrap.min.js" defer></script>
+    <script src="../js/usuariosPages.js" defer></script>
 
     <!-- link de los iconos de google -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -23,10 +26,12 @@
         <!-- link del css -->
     <link href="../src/styles.css" rel="stylesheet" />
 
+
+
     <title>Carg&#225; tus Datos</title>
 </head>
 
-<body>
+<body onload="controlPages()">
     <header>
         <!-- ************************* -->
         <!-- ***** Inicio Header ***** -->
@@ -50,40 +55,27 @@
         <div class="b-example-divider"></div>
 
         <!-- ***** inicio del menu de navegación *****-->
-        <section class="container">
-            <article
-                class="d-flex flex-wrap glass-greenty-card align-items-center justify-content-center justify-content-md-between py-3 mb-4 mt-4 rounded shadow">
-                <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-                    <svg class="bi me-2" color="purple" width="40" height="32" role="img" aria-label="Bootstrap">
-                        <use xlink:href="#bootstrap" />
-                    </svg>
-                </a>
+    <section class="container">
+        <article class="d-flex flex-wrap glass-greenty-card align-items-center justify-content-center justify-content-md-between py-3 mb-4 mt-4 rounded shadow">
+            <a href="../index.html" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                <img class="bi me-2" src="../assets/images/logo-web.png"   role="img" aria-label="Bootstrap">
+                    <use xlink:href="#bootstrap" />
+            </img>
+            </a>
+            <div id="fatherP">             
 
-                <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li>
-                        <a href="../index.html" class="nav-link px-2 text-primary link-secondary active">Inicio</a>
-                    </li>
-                    <li>
-                        <a href="enrolamiento.html" class="nav-link px-2 text-primary link-dark">Sumate</a>
-                    </li>
-                    <li>
-                        <a href="busqueda.html" class="nav-link px-2 text-primary link-dark">B&#250;squedas</a>
-                    </li>
-                    <li>
-                        <a href="ayuda.html" class="nav-link px-2 text-primary link-dark">Ayuda</a>
-                    </li>
-                </ul>
-
-                <div class="col-md-3 text-end">
-                    <button type="button" onclick="window.location.href='login.html';" class="btn btn-outline-primary me-2">
+                <div class="col-md-3 remove-links text-end">
+                    <button type="button" onclick="window.location.href='login.html';" class="btn btn-outline-primary mx-3 mt-1">
                         Ingresar
                     </button>
-                    <button type="button" onclick="window.location.href='registration.html';" class="btn btn-primary">Registrarse</button>
+                    <button type="button" onclick="window.location.href='registration.html';" class="btn btn-primary  mx-1 mt-1">
+                        Registrarse
+                    </button>
                 </div>
-
-                <div class="b-example-divider"></div>
-            </article>
-        </section>
+            </div>
+            <div class="b-example-divider"></div>
+        </article>
+    </section>
     </header>
 
     <main class="text-center">
@@ -137,6 +129,9 @@
                         <label class="label" >Numero de Celular (con numero de area)</label>
                         <input class="form-control form-control-sm my-2" type="tel" placeholder="351XXXXXXX - ejemplo"
                             aria-label=".form-control-sm example" required>
+                        <label class="label">E-mail</label>
+                        <input class="form-control form-control-sm my-2" type="email" placeholder="email@servidor.com"
+                            required>
                         <label class="label" >Seleccione Especialidad</label>
                         <select required class="form-select mt-2 mb-5" aria-label="Default select example" >
                             <option selected>Elija una Opción</option>
@@ -209,7 +204,7 @@
         </div>
     </footer>
 
-    <script src="..\js\cargaStorage.js"></script>
+    <script src="../js/cargaStorage.js"></script>
 
 </body>
 
