--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="shortcut icon" type="image/x-icon" href="/assets/icons/ss.ico">
-  <!-- script de bootstrap -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script> -->
+  
   <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <link href="css/styles.css" rel="stylesheet" />
@@ -52,38 +49,67 @@
                   <use xlink:href="#bootstrap" />
           </img>
           </a>
+          <!-- debajo de está etiqueta se agrega de manera dinamica
+            los enlaces según el tipo de usuario (visitante, registrado, reclutador) -->
         <div id="fatherP">
             
 
-              <div class="col-md-3 remove-links text-end">
-                <button type="button" onclick="window.location.href='/pages/login.html';" class="btn btn-outline-primary mx-3 mt-1">
-                  Ingresar
-                </button>
-                <button type="button" onclick="window.location.href='/pages/registration.html';" class="btn btn-primary  mx-1 mt-1">Registrarse</button>
-              </div>
+              
         </div>
           <div class="b-example-divider"></div>
       </article>
   </section>
   </header>
 
+        <!-- ************************* -->
+        <!-- ***** Inicio Main ******* -->
+        <!-- ************************* -->
+
   <main class="text-center glass-greenty-card mt-4">
 
+    <section>
+      <article class="py-2 px-3 glass-snow mx-auto  mt-3" style="width: 95%">
+        <h1>Te damos la bienvenida a nuestro sitio de Empleo</h1>
 
-    <h1>Te damos la bienvenida a nuestro sitio de Empleo</h1>
+        <h2>Trabajá en el mundo IT gracias a nuestro servicio de reclutamiento</h2>
+      </article>
 
-    <h2>Trabajá en el mundo IT gracias a nuestro servicio de reclutamiento</h2>
 
+      <article class="glass-celesty-card mx-auto  my-4" style="max-width:28rem">
+        <h3 class="py-4 px-5">&#161;Adquiere visibilidad ante los reclutadores IT!</h3>
+        <h4 class=" py-3 px-5">Podras estar en las busquedas laborales de las vacantes tecnol&#243;gicas</h4>
+      </article>
 
+      <article class="glass-greenty-card mx-auto  my-4" style="max-width:28rem">
+        <h3 class="py-4 px-5">&#191;Vas a dejar tu conocimiento estancado?</h3>
+        <h4 class=" py-3 px-5">Encuentra empresas donde llevar tu carrera profesional a lo m&#225;s alto </h4>
+      </article>
+
+      <article class="glass-celesty-card mx-auto  my-4" style="max-width:28rem">
+        <h3 class="py-4 px-5">&#191;Qu&#233; est&#225;s esperando?</h3>
+        <h4 class=" py-3 px-5">Reg&#237;strate e ingres&#225; con tu usuario para completar el formulario de empleo</h4>
+      </article>
+
+    </section>
+    <!-- <div class="card border-success mb-3" style="max-width: 18rem;">
+      <div class="card-header glass-celesty-card border-success">Header</div>
+      <div class="card-body glass-celesty-card text-success">
+        <h5 class="card-title">Success card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      <div class="card-footer glass-celesty-card border-success">Footer</div>
+    </div> -->
 
 
   </main>
-
+    <!-- **************************** -->
+    <!-- ****** Inicio Footer ******* -->
+    <!-- **************************** -->
   <footer class="glass-celesty-card mt-5">
     <div class="container-fluid pt-1 mt-1 mb-0">
       <div class="text-center">
         <h4 class="d-inline-block glass-greenty-card mt-3 p-4">
-          Todas tus vacantes completas
+          Empleos a una busqueda de distanc&#237;a
         </h4>
       </div>
 
@@ -95,8 +121,6 @@
   </footer>
 
 
-  <!-- script para la entrega -->
-  <!-- <script src="js/candidatos.js"></script> -->
 </body>
 
 </html>
