--- a/pages/registration.html
+++ b/pages/registration.html
@@ -51,11 +51,11 @@
 
                         <label class="label">Contraseña</label>
                         <input id="pass" class="form-control form-control-sm my-2"   type="password" placeholder="Ingrese su contraseña"
-                            aria-label=".form-control-sm example"   required>
+                            aria-label=".form-control-sm example" minlength="6" maxlength="16"  required>
 
-                            <!-- <label class="label">Repetí tu Contraseña</label>
-                            <input id="valPass" class="form-control form-control-sm my-2" name="validarPassword"  type="text" placeholder="Repite tu contraseña ingresada"
-                                aria-label=".form-control-sm example"  minlength="6" maxlength="16" required> -->
+                            <label class="label">Repetí tu Contraseña</label>
+                            <input id="valPass" class="form-control form-control-sm my-2" name="validarPassword"  type="password" placeholder="Repite tu contraseña ingresada"
+                                aria-label=".form-control-sm example"  minlength="6" maxlength="16" required>
                     
 
                         <label class="label">*Opcional - Clave de reclutador</label>
